test/subjects/errors/invalid_use.php
<?php
	use "e"; // { phc-error: 'use' builtin not yet a part of PHP. Please use include_once() or require_once() }
?>
